src/test/testFiles/invalid/semanticErrors/arrayAccessIncorrectIndexType.manimdsl
let x = new Array<number>(3);

let y = x[false];